plugins {
    id 'java'
    id 'application'
}

group = 'net.swordie'
version = '1.77.3'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'javax.persistence:javax.persistence-api:2.2'
    implementation 'com.mysql:mysql-connector-j:9.0.0'
    implementation 'io.netty:netty-all:4.1.112.Final'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    runtimeOnly 'com.sun.xml.bind:jaxb-impl:4.0.5'
    implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
    implementation 'org.python:jython-standalone:2.7.3'
    implementation 'org.openjdk.nashorn:nashorn-core:15.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
    implementation 'org.mindrot:jbcrypt:0.4'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
    options.incremental = false
}

application {
    mainClass = 'net.swordie.ms.Server'
}
